<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic_hotel"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_place"
        android:title="@string/title_places" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_liked"
        android:title="@string/title_liked" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>
