<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_scrollFlags="scroll|enterAlways"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
    <HorizontalScrollView android:id="@+id/horizontalscrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"

                android:text="@string/date"
                android:textAllCaps="false"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/guest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@android:color/transparent"

                android:text="@string/guests"
                android:textAllCaps="false"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@android:color/transparent"

                android:text="@string/prices"
                android:textAllCaps="false"
                android:textColor="#FFF" />

        </LinearLayout>
    </HorizontalScrollView>
</FrameLayout>